--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,6 +134,7 @@ sqlalchemy = ">=1.4,<3"
 altair = { version = ">=5.0.1,<6", python = ">=3.10,<3.13" }
 distributed = { version = ">=2022.9.1", python = ">=3.10,<3.13" }
 ipykernel = { version = ">=6.25.1,<7", python = ">=3.10,<3.13" }
+itables = { version = ">=1.6.3,<2", python = ">=3.10,<3.13" }
 nbclient = { version = ">=0.8.0,<1", python = ">=3.10,<3.13" }
 plotly = { version = ">=5.16.1,<6", python = ">=3.10,<3.13" }
 plotnine = { version = ">=0.12.2,<1", python = ">=3.10,<3.13" }
