--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -100,6 +100,7 @@ ipyleaflet==0.18.1 ; python_version >= "3.10" and python_version < "3.13"
 ipython==8.18.1 ; python_version >= "3.9" and python_version < "4.0"
 ipytree==0.2.2 ; python_version >= "3.10" and python_version < "3.13"
 ipywidgets==8.1.1 ; python_version >= "3.10" and python_version < "3.13"
+itables==1.6.3 ; python_version >= "3.10" and python_version < "3.13"
 jaraco-classes==3.3.0 ; python_version >= "3.9" and python_version < "4.0"
 jedi==0.19.1 ; python_version >= "3.9" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.9" and python_version < "4.0" and sys_platform == "linux"
