ci(deps): update nix using renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,6 +12,7 @@
   ],
   "automerge": false,
   "labels": ["dependencies"],
+  "nix": { "enabled": true },
   "packageRules": [
     {
       "matchManagers": ["docker-compose", "dockerfile", "github-actions"],
