--- a/.github/workflows/ibis-backends.yml
+++ b/.github/workflows/ibis-backends.yml
@@ -9,6 +9,7 @@ on:
       - "**/*.qmd"
       - "codecov.yml"
       - ".envrc"
+      - ".codespellrc"
     branches:
       - main
       - "*.x.x"
@@ -20,6 +21,7 @@ on:
       - "**/*.qmd"
       - "codecov.yml"
       - ".envrc"
+      - ".codespellrc"
     branches:
       - main
       - "*.x.x"
