ci: allow codecov uploads to fail (#8234)

--- a/.github/workflows/ibis-backends-cloud.yml
+++ b/.github/workflows/ibis-backends-cloud.yml
@@ -99,6 +99,7 @@ jobs:
 
       - name: upload code coverage
         if: success()
+        continue-on-error: true
         uses: codecov/codecov-action@v4
         with:
           flags: backend,${{ matrix.backend.name }},${{ runner.os }},python-${{ steps.install_python.outputs.python-version }}
