--- a/.github/workflows/ibis-backends.yml
+++ b/.github/workflows/ibis-backends.yml
@@ -177,22 +177,28 @@ jobs:
               - oracle
             services:
               - oracle
-          # - name: flink
-          #   title: Flink
-          #   serial: true
-          #   extras:
-          #     - flink
-          #   additional_deps:
-          #     - apache-flink
-          #     - pytest-split
-          #   services:
-          #     - flink
-          # - name: risingwave
-          #   title: Risingwave
-          #   services:
-          #     - risingwave
-          #   extras:
-          #     - risingwave
+          - name: flink
+            title: Flink
+            serial: true
+            extras:
+              - flink
+            additional_deps:
+              - apache-flink
+            services:
+              - flink
+        include:
+          - os: ubuntu-latest
+            python-version: "3.10"
+            backend:
+              name: flink
+              title: Flink
+              serial: true
+              extras:
+                - flink
+              additional_deps:
+                - apache-flink
+              services:
+                - flink
         exclude:
           - os: windows-latest
             backend:
@@ -296,32 +302,29 @@ jobs:
                 - oracle
               services:
                 - oracle
-          # - os: windows-latest
-          #   backend:
-          #     name: flink
-          #     title: Flink
-          #     serial: true
-          #     extras:
-          #       - flink
-          #     services:
-          #       - flink
-          # - python-version: "3.11"
-          #   backend:
-          #     name: flink
-          #     title: Flink
-          #     serial: true
-          #     extras:
-          #       - flink
-          #     services:
-          #       - flink
-          # - os: windows-latest
-          #   backend:
-          #     name: risingwave
-          #     title: Risingwave
-          #     services:
-          #       - risingwave
-          #     extras:
-          #       - risingwave
+          - os: windows-latest
+            backend:
+              name: flink
+              title: Flink
+              serial: true
+              extras:
+                - flink
+              additional_deps:
+                - apache-flink
+              services:
+                - flink
+          - os: ubuntu-latest
+            python-version: "3.11"
+            backend:
+              name: flink
+              title: Flink
+              serial: true
+              extras:
+                - flink
+              additional_deps:
+                - apache-flink
+              services:
+                - flink
           - os: windows-latest
             backend:
               name: exasol
@@ -390,29 +393,18 @@ jobs:
           IBIS_TEST_IMPALA_PORT: 21050
           IBIS_EXAMPLES_DATA: ${{ runner.temp }}/examples-${{ matrix.backend.name }}-${{ matrix.os }}-${{ steps.install_python.outputs.python-version }}
 
-      # FIXME(deepyaman): If some backend-specific test, in test_ddl.py,
-      #   executes before common tests, they will fail with:
-      #   org.apache.flink.table.api.ValidationException: Table `default_catalog`.`default_database`.`functional_alltypes` was not found.
-      #   Therefore, we run backend-specific tests second to avoid this.
-      # - name: "run serial tests: ${{ matrix.backend.name }}"
-      #   if: matrix.backend.serial && matrix.backend.name == 'flink'
-      #   run: |
-      #     just ci-check -m ${{ matrix.backend.name }} ibis/backends/tests
-      #     just ci-check -m ${{ matrix.backend.name }} ibis/backends/flink/tests
-      #   env:
-      #     IBIS_EXAMPLES_DATA: ${{ runner.temp }}/examples-${{ matrix.backend.name }}-${{ matrix.os }}-${{ steps.install_python.outputs.python-version }}
-      #     FLINK_REMOTE_CLUSTER_ADDR: localhost
-      #     FLINK_REMOTE_CLUSTER_PORT: "8081"
-      #
       - name: "run serial tests: ${{ matrix.backend.name }}"
-        if: matrix.backend.serial # && matrix.backend.name != 'flink'
+        if: matrix.backend.serial
         run: just ci-check -m ${{ matrix.backend.name }}
         env:
+          FLINK_REMOTE_CLUSTER_ADDR: localhost
+          FLINK_REMOTE_CLUSTER_PORT: "8081"
           IBIS_EXAMPLES_DATA: ${{ runner.temp }}/examples-${{ matrix.backend.name }}-${{ matrix.os }}-${{ steps.install_python.outputs.python-version }}
 
       - name: check that no untracked files were produced
         shell: bash
-        run: git checkout poetry.lock pyproject.toml && ! git status --porcelain | tee /dev/stderr | grep .
+        run: |
+          ! git status --porcelain | tee /dev/stderr | grep .
 
       - name: upload code coverage
         if: success()
