ci(risingwave): run tests in series to rule that out as the cause of hanging

--- a/.github/workflows/ibis-backends.yml
+++ b/.github/workflows/ibis-backends.yml
@@ -124,6 +124,7 @@ jobs:
               - libgeos-dev
           - name: risingwave
             title: Risingwave
+            serial: true
             services:
               - risingwave
             extras:
@@ -233,6 +234,7 @@ jobs:
             backend:
               name: risingwave
               title: Risingwave
+              serial: true
               services:
                 - risingwave
               extras:
