refactor(sql): remove old compiler (#8307)
Co-authored-by: Phillip Cloud <417981+cpcloud@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,6 @@ ibis/examples/descriptions
 # automatically generated odbc file for ci
 ci/odbc/odbc.ini
 *-citibike-tripdata.tar.xz
+
+# data downloaded by the geospatial tutorial
+docs/posts/ibis-duckdb-geospatial/nyc_data.db.wal
